--- a/QuizApplication/app/src/main/res/layout/activity_main.xml
+++ b/QuizApplication/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,13 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/question_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="20dp"
-        android:text="Hello World!"
-        android:textSize="20sp" />
+        android:textSize="28sp"
+        tools:text="Este es un texto de prueba que utilizamos para previsualización" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,10 +23,11 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:text="True"
+            android:text="@string/true_text"
             android:textSize="20sp" />
 
         <Space
@@ -34,12 +36,19 @@
             android:layout_weight="1" />
 
         <Button
+            android:id="@+id/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
-            android:text="False"
+            android:text="@string/false_text"
             android:textSize="20sp" />
-
     </LinearLayout>
+
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next"
+        android:textSize="20sp" />
 
 </LinearLayout>
